src/test/ui/cycle-trait-supertrait-indirect.stderr
error[E0391]: unsupported cyclic reference between types/traits detected
  --> $DIR/cycle-trait-supertrait-indirect.rs:20:1
   |
20 | trait C: B { }
   | ^^^^^^^^^^ cyclic reference
   |
note: the cycle begins when computing the supertraits of `B`...
  --> $DIR/cycle-trait-supertrait-indirect.rs:14:1
   |
14 | trait A: B {
   | ^^^^^^^^^^
note: ...which then requires computing the supertraits of `C`...
  --> $DIR/cycle-trait-supertrait-indirect.rs:17:1
   |
17 | trait B: C {
   | ^^^^^^^^^^
   = note: ...which then again requires computing the supertraits of `B`, completing the cycle.

error: aborting due to previous error

